# combo_math

./: .gitignore  README.md
examples/Narayan/: Narayan.sln
img2points/img2points/: CMakeLists.txt
img2points/img2points/img2points/: CMakeLists.txt  img2points.cpp  img2points.h
lessons/: 01 Основные комбинаторные принципы Генерация перестановок.pptx  02 Генерация комбинаторных объектов.pptx  04 Основные определения и свойства графов.pptx  05 Ориентированные графы.pptx  06 Эйлеровы и гамильтоновы графы.pptx  07 Планарные графы. Укладка.pptx  08 Раскраска графов.pptx  10 Алгоритмы решения геометрических задач.pptx  12 Количество остовных деревьев.pptx  13 Поиск максимального потока.pptx  14 Паросочетания.pptx
lw1_double_square/: lw1_double_square.sln
lw1_double_square/lw1_double_square/: DoubleSquare.cpp  DoubleSquare.h  double_square.cpp  lw1_double_square.vcxproj  lw1_double_square.vcxproj.filters
lw1_double_square/lw1_double_square_tests/: double_square_tests.cpp  lw1_double_square_tests.vcxproj  lw1_double_square_tests.vcxproj.filters
lw2_backpack/: lw2_backpack.sln
lw2_backpack/lw2_backpack/: PutInBackpack.cpp  PutInBackpack.h  lw2_backpack.vcxproj  lw2_backpack.vcxproj.filters  main.cpp
lw2_backpack/lw2_backpack_tests/: lw2_backpack_tests.vcxproj  lw2_backpack_tests.vcxproj.filters  tests.cpp
lw3_joint/: lw3_joint.sln
lw3_joint/lw3_joint/: main.cpp  (+1 more)
lw4_delone/: .$uml.drawio.bkp  habr.txt  lw4_delone.sln  plan.txt  uml.drawio
lw5_tree_count/: lw5_tree_count.sln
lw6_flow_finder/: lw6_flow_finder.sln
lw7_pairfinder/: lw7_pairfinder.sln
(+46 files in other folders)
